# innowise_laboratory

./: .gitignore
lecture_1/: pyproject.toml
lecture_2/: main.py
